Fixed issue with 1.8 compatibility